# s3-cli-python

./: .env  README.md  pyproject.toml  s3_cli.py
s3_utils/: bucket_exists.py  bucket_policy.py  check_versioning_status.py  create_bucket.py  delete_bucket.py  download_file_and_upload_to_s3.py  list_buckets.py  list_file_versions.py  move_files.py  s3_client.py  upload_file.py
